<resources>
    <string name="app_name">Suspectory</string>
    <string name="welcome_back">Welcome back</string>
    <string name="fill_your_name_and_your_password">Fill your email and your password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="let_s_get_started">Let’s Get Started!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="verification">Verification</string>
    <string name="enter_the_code">Enter the code sent to your email</string>
    <string name="did_not_receive_a_code">Did not receive a code?</string>
    <string name="r_e_s_e_n_d">RESEND</string>
    <string name="done">Done</string>
    <string name="user_another_email">User another email</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="example_mail_com">example@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="suspected_contacts">Suspected Contacts</string>
    <string name="unknown_contacts">Unknown Contacts</string>
    <string name="all_contacts">All Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="locations">Locations</string>
    <string name="contacts">Contacts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="help">Help!</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="we_are_available_on">We Are Available On</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="enter_your_desc">Please enter your description</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="report_problem_submission">Your problem is submitted successfully to the Admin. Please wait until the Admin\'s response</string>
    <string name="loading">Loading</string>
    <string name="number_already">This Phone Number Already Exists, Try Another</string>
    <string name="open_email">Open Email</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="update">Update</string>
    <string name="your_entered_email_or_pwd_is_incorrect">Your entered email or password is incorrect</string>
    <string name="your_email_or_pwd_is_wrong">Your entered email or password is wrong!</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="add_devices">Add Devices</string>
    <string name="no_chat_found">No Chat Found</string>
</resources>