<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.StartUp.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_shape"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rufina"
                    android:text="App Logo"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/welcome_back"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:text="@string/fill_your_name_and_your_password"
                        android:textColor="@color/gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/sign_in"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/black"
                        app:errorTextColor="@color/red"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/email"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textCursorDrawable="@drawable/cursor_blue" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/black"
                        app:errorTextColor="@color/red"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/password"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textCursorDrawable="@drawable/cursor_blue" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:onClick="resetPassword"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/btn_sign_in_bg"
                        android:fontFamily="@font/poppins"
                        android:text="@string/sign_in_now"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        app:layout_constraintTop_toBottomOf="@+id/btn_login">

                        <View
                            android:layout_width="72dp"
                            android:layout_height="1dp"
                            android:layout_marginEnd="4dp"
                            android:background="@color/gray"
                            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/or"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="72dp"
                            android:layout_height="1dp"
                            android:layout_marginStart="4dp"
                            android:background="@color/gray"
                            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />
                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login_with_google"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_login_with_google"
                        android:drawableStart="@drawable/ic_google"
                        android:drawablePadding="20dp"
                        android:focusable="true"
                        android:fontFamily="@font/poppins"
                        android:foreground="@drawable/ripple"
                        android:gravity="center"
                        android:paddingHorizontal="30dp"
                        android:text="@string/login_with_google"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/ll_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/gray" />


                <TextView
                    android:id="@+id/tv_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/sign_up"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>