<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/purple_500"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/iv_change_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:padding="5dp"
        android:rotation="230"
        android:visibility="gone"
        android:src="@drawable/ic_moon"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/temp_dp"
        app:civ_border_color="@color/black"
        app:civ_border_overlay="true"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civ_user"
        app:layout_constraintTop_toTopOf="@+id/civ_user">


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:maxWidth="180dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:maxWidth="180dp"
            android:text="@string/example_mail_com"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
